--- a/Sources/Windows/Shrimp Reader/Shrimp Reader/Shrimp Reader.csproj
+++ b/Sources/Windows/Shrimp Reader/Shrimp Reader/Shrimp Reader.csproj
@@ -49,6 +49,9 @@
   <PropertyGroup>
     <StartupObject>Shrimp_Reader.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Shrimp Reader.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -111,6 +114,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Shrimp Reader.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
