--- a/Sources/Windows/Shrimp Reader/Shrimp Reader/Shrimp Reader.csproj
+++ b/Sources/Windows/Shrimp Reader/Shrimp Reader/Shrimp Reader.csproj
@@ -66,16 +66,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Shrimp_Reader.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Shrimp_Reader.Designer.cs">
+      <DependentUpon>Shrimp_Reader.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Setup_Trip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Setup_Trip.Designer.cs">
+      <DependentUpon>Setup_Trip.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Shrimp_Reader.resx">
+      <DependentUpon>Shrimp_Reader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -86,6 +92,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Setup_Trip.resx">
+      <DependentUpon>Setup_Trip.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
